ArticleControllerをスキーマ駆動開発するためのベース作成 (#309)
* ArticleControllerにArticlesApiを継承させ、APIテストで叩くURLを修正(まだテストは通らない)

__背景__

- スキーマ駆動開発に移行したい

__対応__

- ArticlesApiを継承する
- APITestでURLのprefixに "/api" をつける
  - まだテストが落ちる(501)
    - CreateArticle
    - UpdateArticle

* clean: ArticleControllerの単体テストを削除

__背景__

- APIテストでほぼ代替できたため

__対応内容__

- 単体テストをファイルごと削除

* feat: ArticleControllerの記事作成をスキーマ駆動に寄せる

__背景__

- スキーマ駆動開発をしたい
  - ArticlesControllerにArticlesApiを継承しただけで2つのルーティングのAPIテストが落ちた

__対応内容__

- 落ちていたCreatedArticleをスキーマ駆動開発に寄せながらテストが通るように修正
- テスト側も適宜修正

* feat: ArticleControllerの記事更新をスキーマ駆動に寄せる

__背景__

- スキーマ駆動開発をしたい
  - ArticlesControllerにArticlesApiを継承しただけで2つのルーティングのAPIテストが落ちた

__対応内容__

- 落ちていたCreatedArticleをスキーマ駆動開発に寄せながらテストが通るように修正
- テスト側も適宜修正
