# e2e/openapi.yml
@@ -529,6 +529,14 @@ paths:
       summary: Create an article
       description: Create an article. Auth is required
       operationId: CreateArticle
+      # 自前追加
+      parameters:
+        - name: Authorization
+          in: header
+          description: セッション用JWT
+          required: true
+          schema:
+            $ref: '#/components/securitySchemes/Token'
       requestBody:
         description: Article to create
         content:
@@ -589,6 +597,13 @@ paths:
       description: Update an article. Auth is required
       operationId: UpdateArticle
       parameters:
+        # 自前追加
+        - name: Authorization
+          in: header
+          description: セッション用JWT
+          required: true
+          schema:
+            $ref: '#/components/securitySchemes/Token'
         - name: slug
           in: path
           description: Slug of the article to update
